# src/routes/personnel.router.js
@@ -5,8 +5,8 @@ const router = require('express').Router()
 const personnel = require('../controllers/personnel.controller')
 const permissions = require('../middlewares/permissions')
 
-router.post('/login', personnel.login)
-router.all('/logout',personnel.logout)
+// router.post('/login', personnel.login)
+// router.all('/logout',personnel.logout)
 
 router.route('/')
     .get(personnel.list)
