# swagger.json
@@ -48,6 +48,16 @@
         }
       }
     },
+    "/authlogout": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/departments/": {
       "get": {
         "description": "",
@@ -144,33 +154,6 @@
             "in": "path",
             "required": true,
             "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/personnels/login": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "username": {
-                  "example": "any"
-                },
-                "password": {
-                  "example": "any"
-                }
-              }
-            }
           }
         ],
         "responses": {
@@ -575,7 +558,7 @@
             },
             "default": {
               "type": "number",
-              "example": 1697455251314
+              "example": 1697456267193
             }
           }
         }
